# datakit

./: .gitignore  CMakeLists.txt  FINAL_REPORT.md  LICENSE  README.md
docs/: API_QUICK_REFERENCE.md  ARCHITECTURE.md  DOCUMENTATION_SUMMARY.md  GETTING_STARTED.md  INDEX.md
docs/advanced/: MEMORY.md  PERFORMANCE.md  PLATFORMS.md  SCALE_AWARE.md  THREAD_SAFETY.md
docs/development/: BUILDING.md  CONTRIBUTING.md  DEBUGGING.md  TESTING.md
docs/examples/: BENCHMARKS.md  MIGRATION.md  PATTERNS.md  USE_CASES.md
docs/modules/compression/: DOD.md  FLOAT16.md  XOF.md
docs/modules/core/: DATABOX.md
docs/modules/flex/: FLEX.md  MFLEX.md
docs/modules/intset/: HYPERLOGLOG.md  INTSET.md  INTSET_U32.md
docs/modules/memory/: FIBBUF.md  JEBUF.md  MEMBOUND.md  OFFSET_ARRAY.md  PTR_PREV_NEXT.md
docs/modules/multi/: MULTIDICT.md  MULTILRU.md  MULTIROAR.md
docs/modules/multiarray/: EXAMPLES.md  MULTIARRAY.md  VARIANTS.md
docs/modules/multilist/: EXAMPLES.md  MULTILIST.md  VARIANTS.md
docs/modules/multimap/: EXAMPLES.md  MULTIMAP.md  VARIANTS.md
docs/modules/string/: DKS.md  STR.md  STR_DOUBLE_FORMAT.md  STR_UTILS.md
docs/modules/system/: FASTMUTEX.md  MULTI_TIMER.md  OS_REGULATE.md  SETPROCTITLE.md  TIME_UTIL.md  VERSION_OS_RUNTIME.md
docs/modules/utils/: INTERSECT_INT.md  LIST.md  MULTIHEAP.md
src/: CMakeLists.txt  OSRegulate.c  OSRegulate.h  asmUtils.h  atomPool.c  atomPool.h  bbits.c  bbits.h  bigmath-imath.c  bigmath.h  cleaner.h  clusterRing.c  clusterRing.h  clusterRingInternal.h  compressionBench.c  compressionBench.h  config.h  conformLittleEndian.h  ctest.h  databox.c  databox.h  databoxLinear.c  databoxLinear.h  datakit-test.c  datakit.c  datakit.h  dataspeed.c  dataspeed.h  dj.c  dj.h  dks.c  dks.h  dksCompact.h  dksFull.h  dod.c  dod.h  endianIsLittle.h  fastmutex.c  fastmutex.h  fibbuf.c  (+147 more)
src/fenwick/: CMakeLists.txt  fenwickCommon.h  fenwickCore.h  fenwickCoreFullImpl.h  fenwickCoreImpl.h  fenwickDouble.c  fenwickDouble.h  fenwickDoubleFull.c  fenwickDoubleSmall.c  fenwickFloat.c  fenwickFloat.h  fenwickFloatFull.c  fenwickFloatSmall.c  fenwickI128.c  fenwickI128.h  fenwickI128Full.c  fenwickI128Small.c  fenwickI16.c  fenwickI16.h  fenwickI16Full.c  fenwickI16Small.c  fenwickI32.c  fenwickI32.h  fenwickI32Full.c  fenwickI32Small.c  fenwickI64.c  fenwickI64.h  fenwickI64Full.c  fenwickI64Small.c  fenwickI64Test.c  fenwickU128.c  fenwickU128.h  fenwickU128Full.c  fenwickU128Small.c  fenwickU16.c  fenwickU16.h  fenwickU16Full.c  fenwickU16Small.c  fenwickU32.c  fenwickU32.h  (+6 more)
src/persist/: flexP.c  flexP.h  intsetP.c  intsetP.h  multiOrderedSetP.c  multiOrderedSetP.h  multidictP.c  multidictP.h  multilistP.c  multilistP.h  multilruP.c  multilruP.h  multimapP.c  multimapP.h  multiroarP.c  multiroarP.h  persistCtx.c  persistCtx.h  persistTestCommon.h
src/segment/: CMakeLists.txt  segmentCommon.h  segmentCore.h  segmentCoreFullImpl.h  segmentCoreImpl.h  segmentDouble.c  segmentDouble.h  segmentDoubleFull.c  segmentDoubleSmall.c  segmentFloat.c  segmentFloat.h  segmentFloatFull.c  segmentFloatSmall.c  segmentI128.c  segmentI128.h  segmentI128Full.c  segmentI128Small.c  segmentI16.c  segmentI16.h  segmentI16Full.c  segmentI16Small.c  segmentI32.c  segmentI32.h  segmentI32Full.c  segmentI32Small.c  segmentI64.c  segmentI64.h  segmentI64Full.c  segmentI64Small.c  segmentI64Test.c  segmentU128.c  segmentU128.h  segmentU128Full.c  segmentU128Small.c  segmentU16.c  segmentU16.h  segmentU16Full.c  segmentU16Small.c  segmentU32.c  segmentU32.h  (+6 more)
src/str/: strBitmapGetSetPositionsExact.c  strCountDigits.c  strDigitsVerify.c  strLuajitStr.c  strPopcnt.c  strPow.c  strRandom.c  strSqliteLog.c  strSqliteNumeric.c  strSqliteStr.c  strToBufFast.c  strToBufSplat.c  strToBufTable.c  strToNative.c  strUTF8.c  strUTF8Case.c  strUTF8Compare.c  strUTF8Cursor.c  strUTF8Grapheme.c  strUTF8Search.c  strUTF8Substr.c  strUTF8Valid.c  strUTF8Width.c  strUnicodeData.c
